tests/Checker/everything/errors/25a.vc
void f() { return; }

int main() {
    f(3);
    return 1;
}
